SigmaCodebackup3rdSep/objects/StockMovement__c.object
<CustomObject>
    <fields>
        <fullName>Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Bin</label>
        <referenceTo>Sublevel_location__c</referenceTo>
        <relationshipLabel>Stock Movements</relationshipLabel>
        <relationshipName>Stock_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Stock Receiving</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Stock Movements (From Location)</relationshipLabel>
        <relationshipName>Stock_Movements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipName>StockMovements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <formula>From_Location__r.Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>Location__r.Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Inventory Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Stock Movements</relationshipLabel>
        <relationshipName>Stock_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>StockMovements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>StockMovements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Stock Movements</relationshipLabel>
        <relationshipName>Stock_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_DateTime__c</fullName>
        <label>Received DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Received_Quantity__c</fullName>
        <label>Received Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_In_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock In Product</label>
        <referenceTo>Stock_In_Product__c</referenceTo>
        <relationshipName>StockMovements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stock_Movement_Type__c</fullName>
        <label>Stock Movement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>OUT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Movement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Movement</label>
        <referenceTo>StockMovement__c</referenceTo>
        <relationshipLabel>Stock Movements</relationshipLabel>
        <relationshipName>Stock_Movements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF(ISPICKVAL(Stock_Movement_Type__c, &apos;IN&apos;), &apos;IN&apos;, 
IF(ISPICKVAL(Stock_Movement_Type__c, &apos;OUT&apos;), &apos;OUT&apos;, 
&apos;NA&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Stock Movement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>From_Location__c</columns>
        <columns>Bin__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Stock_Movement_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SM-{00000}</displayFormat>
        <label>StockMovement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Movements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>